test/src/e2e_vm_tests/test_programs/should_pass/language/asm/asm_patch/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_pass/language/asm/asm_patch
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/asm/asm_patch
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
warning
  --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:53:4
   |
51 | ///
52 | /// * [raw_slice] - The newly created `raw_slice`.
53 | fn from_parts(parts: (raw_ptr, u64)) -> raw_slice {
   |    ---------- This function is never called.
54 |     asm(ptr: parts) {
55 |         ptr: raw_slice
   |
____

warning
  --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:68:4
   |
66 | ///
67 | /// * [(raw_ptr, u64)] - A tuple of the location in memory of the original `raw_slice` and its length.
68 | fn into_parts(slice: raw_slice) -> (raw_ptr, u64) {
   |    ---------- This function is never called.
69 |     asm(ptr: slice) {
70 |         ptr: (raw_ptr, u64)
   |
____

warning
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3402:40
     |
3400 | // Tests
3401 | 
3402 | fn assert_encoding<T, SLICE>(value: T, expected: SLICE)
     |                                        -------- This declaration is never used.
3403 | where
3404 |     T: AbiEncode,
     |
____

warning
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3436:5
     |
3434 | fn assert_encoding_and_decoding<T, SLICE>(
3435 |     value: T,
3436 |     expected: SLICE,
     |     -------- This declaration is never used.
3437 | )
3438 | where
     |
____

warning
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3475:16
     |
3473 | }
3474 | 
3475 | fn to_slice<T>(array: T) -> raw_slice {
     |                ----- This declaration is never used.
3476 |     let len = __size_of::<T>();
3477 |     raw_slice::from_parts::<u8>(__addr_of(array), len)
     |
____

warning
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:1746:22
     |
1744 | }
1745 | 
1746 | pub fn abi_decode<T>(data: raw_slice) -> T
     |                      ---- This declaration is never used.
1747 | where
1748 |     T: AbiDecode,
     |
____

warning
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:1893:13
     |
1891 |     fn abi_decode(ref mut buffer: BufferReader) -> str {
1892 |         let len = buffer.read_8_bytes::<u64>();
1893 |         let data = buffer.read_bytes(len);
     |             ---- This declaration is never used.
1894 |         asm(s: (data.ptr(), len)) {
1895 |             s: str
     |
____

warning
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:1907:13
     |
1905 |     }
1906 |     fn abi_decode(ref mut buffer: BufferReader) -> str[N] {
1907 |         let data = buffer.read_bytes(N);
     |             ---- This declaration is never used.
1908 |         asm(s: data.ptr()) {
1909 |             s: str[N]
     |
____

warning
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3322:5
     |
3320 | pub fn contract_call<T, TArgs>(
3321 |     contract_id: b256,
3322 |     method_name: raw_slice,
     |     ----------- This declaration is never used.
3323 |     args: TArgs,
3324 |     coins: u64,
     |
____

warning
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3332:9
     |
3330 |     TArgs: AbiEncode,
3331 | {
3332 |     let second_parameter = encode(args);
     |         ---------------- This declaration is never used.
3333 |     let params = (
3334 |         contract_id,
     |
____

error
 --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:5:7
  |
3 | use ::ops::*;
4 | use ::raw_ptr::*;
5 | use ::error_signals::REVERT_WITH_RAW_SLICE_LEN_ZST;
  |       ^^^^^^^^^^^^^ Module "error_signals" could not be found.
6 | 
7 | /// Trait to return a type as a `raw_slice`.
  |
____

error
   --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:176:22
    |
174 |             into_parts(self).1 / len
175 |         } else {
176 |             __revert(REVERT_WITH_RAW_SLICE_LEN_ZST);
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Variable "REVERT_WITH_RAW_SLICE_LEN_ZST" does not exist in this scope.
177 |         }
178 |     }
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:204:14
    |
...
204 |         self.ptr() == other.ptr() && self.number_of_bytes() == other.number_of_bytes()
    |              ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:204:20
    |
...
204 |         self.ptr() == other.ptr() && self.number_of_bytes() == other.number_of_bytes()
    |                    ^^ "eq({unknown}, {unknown}) -> bool" is not found for type "{unknown}".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:204:29
    |
...
204 |         self.ptr() == other.ptr() && self.number_of_bytes() == other.number_of_bytes()
    |                             ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:204:43
    |
...
204 |         self.ptr() == other.ptr() && self.number_of_bytes() == other.number_of_bytes()
    |                                           ^^^^^^^^^^^^^^^ "number_of_bytes(raw_slice)" is not found for type "raw_slice".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:204:61
    |
...
204 |         self.ptr() == other.ptr() && self.number_of_bytes() == other.number_of_bytes()
    |                                                             ^^ "eq({unknown}, {unknown}) -> bool" is not found for type "{unknown}".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/raw_slice.sw:204:70
    |
...
204 |         self.ptr() == other.ptr() && self.number_of_bytes() == other.number_of_bytes()
    |                                                                      ^^^^^^^^^^^^^^^ "number_of_bytes(raw_slice)" is not found for type "raw_slice".
    |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:1752:50
     |
...
1752 |         let item: &T = asm(size: size, src: data.ptr()) {
     |                                                  ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:1759:56
     |
...
1759 |         let mut buffer = BufferReader::from_parts(data.ptr(), data.len::<u8>());
     |                                                        ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:1759:56
     |
...
1759 |         let mut buffer = BufferReader::from_parts(data.ptr(), data.len::<u8>());
     |                                                        ^^^ "ptr(raw_slice) -> raw_ptr" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:1759:68
     |
...
1759 |         let mut buffer = BufferReader::from_parts(data.ptr(), data.len::<u8>());
     |                                                                    ^^^ "len(raw_slice) -> u64" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:1894:22
     |
...
1894 |         asm(s: (data.ptr(), len)) {
     |                      ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:1908:21
     |
...
1908 |         asm(s: data.ptr()) {
     |                     ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3335:28
     |
...
3335 |         asm(a: method_name.ptr()) {
     |                            ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3338:33
     |
...
3338 |         asm(a: second_parameter.ptr()) {
     |                                 ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3412:31
     |
...
3412 |     let expected = raw_slice::from_parts::<u8>(__addr_of(expected), len);
     |                               ^^^^^^^^^^ "from_parts(raw_ptr, u64)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3415:15
     |
...
3415 |     if actual.len::<u8>() != expected.len::<u8>() {
     |               ^^^ "len(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3415:27
     |
...
3415 |     if actual.len::<u8>() != expected.len::<u8>() {
     |                           ^^ "neq({unknown}, {unknown}) -> bool" is not found for type "{unknown}".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3415:39
     |
...
3415 |     if actual.len::<u8>() != expected.len::<u8>() {
     |                                       ^^^ "len({unknown})" is not found for type "{unknown}".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3421:28
     |
...
3421 |         expected: expected.ptr(),
     |                            ^^^ "ptr({unknown})" is not found for type "{unknown}".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3422:24
     |
...
3422 |         actual: actual.ptr(),
     |                        ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3447:31
     |
...
3447 |     let expected = raw_slice::from_parts::<u8>(__addr_of(expected), len);
     |                               ^^^^^^^^^^ "from_parts(raw_ptr, u64)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3450:15
     |
...
3450 |     if actual.len::<u8>() != expected.len::<u8>() {
     |               ^^^ "len(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3450:39
     |
...
3450 |     if actual.len::<u8>() != expected.len::<u8>() {
     |                                       ^^^ "len({unknown})" is not found for type "{unknown}".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3456:28
     |
...
3456 |         expected: expected.ptr(),
     |                            ^^^ "ptr({unknown})" is not found for type "{unknown}".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3457:24
     |
...
3457 |         actual: actual.ptr(),
     |                        ^^^ "ptr(raw_slice)" is not found for type "raw_slice".
     |
____

error: Associated function or method is not found
    --> test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core/src/codec.sw:3477:16
     |
...
3477 |     raw_slice::from_parts::<u8>(__addr_of(array), len)
     |                ^^^^^^^^^^ "from_parts(raw_ptr, u64) -> raw_slice" is not found for type "raw_slice".
     |
____

  Aborting due to 28 errors.
error: Failed to compile std

> forc parse-bytecode test/src/e2e_vm_tests/test_programs/should_pass/language/asm/asm_patch/out/debug/asm_patch.bin
exit status: 0
output:
                                                                                                                  
  half-word   byte   op                                              raw           notes                          
          0   0      MOVE { dst: 0x3c, src: 0x3 }                    1a f0 30 00                                  
          1   4      JMPF { dynamic: 0x0, fixed: 4 }                 74 00 00 04                                  
          2   8      InvalidOpcode                                   00 00 00 00   data section offset lo (0)     
          3   12     InvalidOpcode                                   00 00 00 68   data section offset hi (104)   
          4   16     InvalidOpcode                                   00 00 00 00   configurables offset lo (0)    
          5   20     InvalidOpcode                                   00 00 00 68   configurables offset hi (104)  
          6   24     LW { dst: 0x3f, ptr: 0x3c, offset: 1 }          5d ff c0 01                                  
          7   28     ADD { dst: 0x3f, lhs: 0x3f, rhs: 0x3c }         10 ff ff 00                                  
          8   32     MOVE { dst: 0x3b, src: 0x5 }                    1a ec 50 00                                  
          9   36     CFEI { amount: 24 }                             91 00 00 18                                  
         10   40     JAL { ret_ptr: 0x3e, target: 0x3, offset: 8 }   99 f8 30 08                                  
         11   44     SW { ptr: 0x3b, value: 0x3d, offset: 0 }        5f ef d0 00                                  
         12   48     SW { ptr: 0x3b, value: 0x3b, offset: 1 }        5f ef b0 01                                  
         13   52     MOVI { dst: 0x34, val: 8 }                      72 d0 00 08                                  
         14   56     SW { ptr: 0x3b, value: 0x34, offset: 2 }        5f ef 40 02                                  
         15   60     LW { dst: 0x34, ptr: 0x3b, offset: 1 }          5d d3 b0 01                                  
         16   64     LW { dst: 0x33, ptr: 0x3b, offset: 2 }          5d cf b0 02                                  
         17   68     RETD { ptr: 0x34, len: 0x33 }                   25 d3 30 00                                  
         18   72     PSHH { bitmask: 528384 }                        96 08 10 00                                  
         19   76     ADDI { dst: 0x34, lhs: 0x0, rhs: 3 }            50 d0 00 03                                  
         20   80     ADDI { dst: 0x10, lhs: 0x10, rhs: 4 }           50 41 00 04                                  
         21   84     ADDI { dst: 0x34, lhs: 0x34, rhs: 5 }           50 d3 40 05                                  
         22   88     ADDI { dst: 0x10, lhs: 0x10, rhs: 4 }           50 41 00 04                                  
         23   92     POPH { bitmask: 528384 }                        98 08 10 00                                  
         24   96     JAL { ret_ptr: 0x0, target: 0x3e, offset: 0 }   99 03 e0 00                                  
         25   100    NOOP                                            47 00 00 00                                  
                                                                                                                  


> patch-bin debug

> forc parse-bytecode test/src/e2e_vm_tests/test_programs/should_pass/language/asm/asm_patch/out/debug/asm_patch.bin
exit status: 0
output:
                                                                                                                  
  half-word   byte   op                                              raw           notes                          
          0   0      MOVE { dst: 0x3c, src: 0x3 }                    1a f0 30 00                                  
          1   4      JMPF { dynamic: 0x0, fixed: 4 }                 74 00 00 04                                  
          2   8      InvalidOpcode                                   00 00 00 00   data section offset lo (0)     
          3   12     InvalidOpcode                                   00 00 00 68   data section offset hi (104)   
          4   16     InvalidOpcode                                   00 00 00 00   configurables offset lo (0)    
          5   20     InvalidOpcode                                   00 00 00 68   configurables offset hi (104)  
          6   24     LW { dst: 0x3f, ptr: 0x3c, offset: 1 }          5d ff c0 01                                  
          7   28     ADD { dst: 0x3f, lhs: 0x3f, rhs: 0x3c }         10 ff ff 00                                  
          8   32     MOVE { dst: 0x3b, src: 0x5 }                    1a ec 50 00                                  
          9   36     CFEI { amount: 24 }                             91 00 00 18                                  
         10   40     JAL { ret_ptr: 0x3e, target: 0x3, offset: 8 }   99 f8 30 08                                  
         11   44     SW { ptr: 0x3b, value: 0x3d, offset: 0 }        5f ef d0 00                                  
         12   48     SW { ptr: 0x3b, value: 0x3b, offset: 1 }        5f ef b0 01                                  
         13   52     MOVI { dst: 0x34, val: 8 }                      72 d0 00 08                                  
         14   56     SW { ptr: 0x3b, value: 0x34, offset: 2 }        5f ef 40 02                                  
         15   60     LW { dst: 0x34, ptr: 0x3b, offset: 1 }          5d d3 b0 01                                  
         16   64     LW { dst: 0x33, ptr: 0x3b, offset: 2 }          5d cf b0 02                                  
         17   68     RETD { ptr: 0x34, len: 0x33 }                   25 d3 30 00                                  
         18   72     PSHH { bitmask: 528384 }                        96 08 10 00                                  
         19   76     ADDI { dst: 0x34, lhs: 0x0, rhs: 3 }            50 d0 00 03                                  
         20   80     ADDI { dst: 0x10, lhs: 0x10, rhs: 4 }           50 41 00 04                                  
         21   84     ADDI { dst: 0x34, lhs: 0x34, rhs: 5 }           50 d3 40 05                                  
         22   88     ADDI { dst: 0x10, lhs: 0x10, rhs: 4 }           50 41 00 04                                  
         23   92     POPH { bitmask: 528384 }                        98 08 10 00                                  
         24   96     JAL { ret_ptr: 0x0, target: 0x3e, offset: 0 }   99 03 e0 00                                  
         25   100    NOOP                                            47 00 00 00                                  
                                                                                                                  


> fuel-vm run test/src/e2e_vm_tests/test_programs/should_pass/language/asm/asm_patch/out/debug/asm_patch.bin
Gas: 379
Logs:
ReturnData {
    id: 0x0000000000000000000000000000000000000000000000000000000000000000,
    ptr: 10728,
    len: 8,
    digest: 0xaf5570f5a1810b7af78caf4bc70a660f0df51e42baf91d4de5b2328de0e83dfc,
    pc: 10436,
    is: 10368,
    data: Some(
        Bytes(
            0000000000000000,
        ),
    ),
}
ScriptResult {
    result: Success,
    gas_used: 379,
}
